--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ThengPY/Food-Service-App.git"
+    "url": "git+https://github.com/ThengPY/Campus-Eats.git"
   },
   "author": "Theng",
   "license": "ISC",
