--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "flowbite-react": "^0.10.2",
