--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "",
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "flowbite-react": "^0.10.2",
