--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "flowbite-react": "^0.10.2",
+    "node-schedule": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
