--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "react-scripts test",
-    "start": "concurrently \"react-scripts start\" \"node src/Server.js\"",
+    "start": "concurrently \"react-scripts start\" \"node src/Server.js\" \"node src/DeliverySchedule.js\"",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "server": "node src/Server.js"
